--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+dj-database-url==0.5.0
 Django==2.1.3
+django-heroku==0.3.1
 django-rest==0.0.1
 django-rest-auth==0.9.3
 djangorestframework==3.9.0
-pip==18.1
+gunicorn==19.9.0
+psycopg2==2.7.6.1
 pytz==2018.7
+six==1.11.0
+whitenoise==4.1.2
